# workshop-ia-nov2025

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/instructions/: coding-rules.instructions.md  frontend.instructions.md
.github/prompts/: 05-refactor-tests-structure.prompt.md  v0-ui-generation.prompt.md
.specs/features/: planning.md  tasks.md
docs/adrs/: adr-001-supabase-python-client.md  adr-002-arquitectura-por-capas.md  adr-003-server-components-url-params.md
docs/architecture/: c4-containers.md  c4-context.md
docs/database/: er-diagram.md
src/backend/: .env.example  main.py  pyproject.toml
src/backend/api/: companies.py  health.py  industries.py  locations.py
src/backend/core/: __init__.py  settings.py  supabase_client.py
src/backend/repositories/: __init__.py  company_repository.py  industry_repository.py  location_repository.py
src/backend/schemas/: company.py  industry.py  location.py  pagination.py
src/backend/services/: company_service.py  industry_service.py  location_service.py
src/backend/tests/: conftest.py
src/backend/tests/api/: test_companies.py  test_industries.py  test_locations.py
src/backend/tests/repositories/: test_company_repository.py  test_industry_repository.py  test_location_repository.py
src/backend/tests/services/: test_company_service.py  test_industry_service.py  test_location_service.py
src/frontend/app/: error.tsx  loading.tsx  page.tsx
src/frontend/components/: CompanyFilters.tsx  CompanyTable.tsx  Pagination.tsx
src/frontend/lib/: api.ts  types.ts
