[project]
name = "top-saas-backend"
version = "1.0.0"
description = "Top SaaS Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.120.1",
    "pydantic-settings>=2.11.0",
    "supabase>=2.28.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.2",
]

